err/github-email-explorer.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.8.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-0.23.egg-info'...
Listing './lib/python3.5/site-packages/github_email_explorer'...
Compiling './lib/python3.5/site-packages/github_email_explorer/cli_explore.py'...
***   File "./lib/python3.5/site-packages/github_email_explorer/cli_explore.py", line 51
    print "== GitHub API Status =="
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/github_email_explorer/cli_sendgrid.py'...
***   File "./lib/python3.5/site-packages/github_email_explorer/cli_sendgrid.py", line 39
    print "Send email by list..."
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/github_email_explorer/email_handler.py'...
***   File "./lib/python3.5/site-packages/github_email_explorer/email_handler.py", line 144
    print gt.render_content()
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/github_email_explorer/github_email.py'...
***   File "./lib/python3.5/site-packages/github_email_explorer/github_email.py", line 101
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/github_email_explorer-0.2.8.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_http_client'...
Listing './lib/python3.5/site-packages/python_http_client-2.1.1.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/sendgrid'...
Listing './lib/python3.5/site-packages/sendgrid/helpers'...
Listing './lib/python3.5/site-packages/sendgrid/helpers/mail'...
Compiling './lib/python3.5/site-packages/sendgrid/temp.py'...
***   File "./lib/python3.5/site-packages/sendgrid/temp.py", line 36
    print e.read()
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sendgrid-3.1.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tabulate-0.7.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
